# synnetqos

./: .gitignore  CITATION.cff  LICENSE  LICENSE-DATA  NOTICE  README.md  pyproject.toml  requirements.txt
config/: generator_reference.yaml  paths.example.yaml
data/: README.md
docs/: repository_layout.md
figures/: README.md
notebooks/exploratory/: README.md
results/: README.md
results/external_alignment/: controlled_5g_subset_audit.csv  external_alignment_campus_controlled_5g_summary.csv  external_alignment_diagnostic_summary.csv  external_alignment_interpretation_flags.csv  external_alignment_summary.csv  external_alignment_vienna_phone_summary.csv  external_feature_mapping.csv  external_validation_campus_controlled_5g_summary.csv  external_validation_diagnostic_summary.csv  external_validation_vienna_phone_summary.csv
results/generator/: dataset_integrity_summary.csv  dataset_schema.csv  drop_event_summary.csv  generator_config.json  monte_carlo_run_metrics.csv  monte_carlo_stability_summary.csv  numerical_range_summary.csv  outlier_report.csv  propagation_model_audit.csv  vonr_latency_consistency.csv
results/ml_benchmark/: ml_benchmark_run_metrics.csv  ml_benchmark_summary.csv  ml_confusion_summary.csv  ml_feature_importance.csv  ml_feature_sets.csv  (+5 more)
scripts/: 01_generate_dataset.py  02_external_alignment.py  02_internal_consistency_checks.py  03_monte_carlo_stability.py  04_external_alignment.py  04_ml_benchmark.py  05_ml_benchmark.py  06_simulator_comparison.py
tests/: test_generator_kpi_scaling.py  test_integrity.py  test_simulator_comparison.py
(+25 files in other folders)
