[project]
name = "synnetqos"
version = "1.0.0"
description = "Transparent synthetic 4G/5G QoS/QoE data generator and benchmark suite"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "SynNetQoS authors" }
]

[project.urls]
Repository = "https://github.com/codingmoose-dev/synnetqos"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"